# chopsui

./: .build.yml  .gitignore  .travis.yml  LICENSE  Makefile  README.md  glgen.sh  meson.build  sui-grammar.ebnf
css/: Makefile  color_parse.c  css.h  css_load.c  css_parse.c  css_parse_ch.c  keyframes_free.c  media_rule_free.c  meson.build  parse_comment.c  parse_document.c  parse_properties.c  scalar_normalize.c  scalar_parse.c  selector_free.c  selector_parse.c  selector_print.c  style_context_type.c  style_get_attr.c  style_get_context.c  style_rule_free.c  style_type.c  stylesheet_free.c  subparser.h
demos/: basic.c  meson.build
demos/basic/: main.c  style.css  window.sui
docs/: example.floo  example.py
docs/example/: example.c
gfx/: egl.c  egl.h  glapi.txt  meson.build  render_node.c
host/: host.c  meson.build  window.c
host/wayland/: host.c  registry.c  wayland.h  window.c
include/: host.h  node.h  scalars.h  type.h
include/chopsui/: css.h  host.h  node.h  parser.h  render_node.h  scalars.h  sui.h  tree.h  type.h  window.h
include/chopsui/util/: errors.h  hashtable.h  list.h  log.h  set.h  string.h  unicode.h
include/gfx/: egl.h
include/util/: os-compatibility.h
node/: Makefile  meson.build  node.h  node_add_class.c  node_append_child.c  node_detach.c  node_find_ancestor.c  node_find_ancestors.c  node_find_descendant.c  node_find_descendants.c  node_free.c  node_get_attr.c  node_has_class.c  node_has_type.c  node_initialize_types.c  node_insert_child.c  node_matches_selector.c  node_remove_class.c  node_set_attr.c  node_type_add_impl.c  node_type_remove_impl.c
parser/: Makefile  meson.build  parse_ch.c  parser_buffer_empty.c  parser_cleanup.c  parser_error.c  parser_far_peek_ch.c  parser_init.c  parser_log.c  parser_peek_ch.c  parser_pop.c  parser_pop_ch.c  parser_push_ch.c  push_parser.c
sui/: Makefile  meson.build  parse_attr.c  parse_node.c  parse_string.c  subparser.h  sui_load.c  sui_node_create.c  sui_parse.c  sui_parse_ch.c
test/: Makefile  main.c  meson.build  test_css_parse.c  test_node_find_ancestor.c  test_node_find_descendant.c  test_node_matches_selector.c  test_scalar_parse.c  test_selector_parse.c  test_sui_parse.c
test/css/: css_parse.c  scalar_parse.c  selector_parse.c
test/node/: Makefile  node_find_descendant.c  node_matches_selector.c
test/sui/: sui_parse.c
test/util/: unicode.c
type/: Makefile  attr_spec_attr_default.c  attr_spec_attr_spec.c  impl.c  meson.build  type.h  type_get_attr_spec.c  type_impl_map.c  type_impl_register.c  type_impls_register.c
util/: errors.c  hashtable.c  list.c  log.c  meson.build  set.c  string.c  utf8_chsize.c  utf8_decode.c  utf8_encode.c  utf8_fread.c  utf8_read.c  utf8_size.c
window/: Makefile  meson.build  window.c
window/wayland/: Makefile  meson.build  registry.c  wayland.h  window.c
