lib_sui_css = static_library(
	'sui_css',
	files(
		'color_parse.c',
		'css_parse.c',
		'css_parse_ch.c',
		'keyframes_free.c',
		'media_rule_free.c',
		'parse_comment.c',
		'parse_document.c',
		'parse_properties.c',
		'scalar_normalize.c',
		'scalar_parse.c',
		'selector_free.c',
		'selector_parse.c',
		'selector_print.c',
		'style_rule_free.c',
		'stylesheet_free.c',
	),
	include_directories: sui_inc
)
