lib_sui_node = static_library(
	'sui_node',
	files(
		'node_add_class.c',
		'node_append_child.c',
		'node_detach.c',
		'node_find_ancestor.c',
		'node_find_ancestors.c',
		'node_find_descendant.c',
		'node_find_descendants.c',
		'node_free.c',
		'node_get_attr.c',
		'node_has_class.c',
		'node_has_type.c',
		'node_initialize_types.c',
		'node_insert_child.c',
		'node_matches_selector.c',
		'node_remove_class.c',
		'node_set_attr.c',
		'node_type_add_impl.c',
		'node_type_remove_impl.c',
	),
	include_directories: sui_inc
)
