lib_sui_parser = static_library(
	'sui_parser',
	files(
		'parse_ch.c',
		'parser_buffer_empty.c',
		'parser_cleanup.c',
		'parser_error.c',
		'parser_far_peek_ch.c',
		'parser_init.c',
		'parser_log.c',
		'parser_peek_ch.c',
		'parser_pop.c',
		'parser_pop_ch.c',
		'parser_push_ch.c',
		'push_parser.c',
	),
	include_directories: sui_inc
)

